--- a/VITE-PROJECT/style.css
+++ b/VITE-PROJECT/style.css
@@ -1,4 +1,3 @@
-@import url(variable.css);
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -93,6 +92,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #ffffff;
   }
 }
