--- a/VITE-PROJECT/styles/variables.css
+++ b/VITE-PROJECT/styles/variables.css
@@ -1,3 +1,16 @@
+html,
+body,
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+:root{
+  --light-blue:#2998ff;
+
+  
+}
 body {
     background-color: purple;
   }
