--- a/VITE-PROJECT/styles/variables.css
+++ b/VITE-PROJECT/styles/variables.css
@@ -7,9 +7,23 @@ body,
   font-size: 62.5%;
 }
 :root{
+  --black: #000;
   --light-blue:#2998ff;
+  --dark-blue: #135cc5;
+  --light-red: #f87171;
+  --dark-red: #dc2626;
+  --gray: #252c30;  
 
-  
+/*intentions*/
+--primary:var(--light-blue);
+--secondary:var(--dark-blue);
+
+  /*typography*/
+  --h1: 7.594rem;
+  --h2: 5.063rem;
+  --h3: 3.375rem;
+  --h4: 2.25rem;
+  --h5: 1.5rem;
 }
 body {
     background-color: purple;
