--- a/VITE-PROJECT/styles/variables.css
+++ b/VITE-PROJECT/styles/variables.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@400;700&display=swap%22);
 html,
 body,
 * {
@@ -5,35 +6,184 @@ body,
   padding: 0;
   box-sizing: border-box;
   font-size: 62.5%;
+  justify-content: center;
 }
-:root{
-  --black: #000;
-  --light-blue:#2998ff;
-  --dark-blue: #135cc5;
-  --light-red: #f87171;
-  --dark-red: #dc2626;
-  --gray: #252c30;  
+body {
+  font-family: "Bitter", serif;
+}
+:root {
+  --almond: #f1dac4;
+  --gray: #a69cac;
+  --navy: #474973;
+  --blue: #161b33;
+  --black: #0d0c1d;
+  --green: #1e3231;
+  --blackcoral: #485665;
+  --lilac: #d0a5c0;
+  --purple: #8e7c93;
+  --pink: #f6c0d0;
 
-/*intentions*/
---primary:var(--light-blue);
---secondary:var(--dark-blue);
+  --primary: var(--almond);
+  --secondary: var(--gray);
 
-  /*typography*/
   --h1: 7.594rem;
   --h2: 5.063rem;
   --h3: 3.375rem;
   --h4: 2.25rem;
   --h5: 1.5rem;
 }
+
+.cool {
+  --primary: var(--almond);
+  --secondary: var(--gray);
+  --tertiary: var(--navy);
+  --four: var(--blue);
+  --five: var(--black);
+}
+.warm {
+  --secondary: var(--green);
+  --five: var(--blackcoral);
+  --tertiary: var(--purple);
+  --four: var(--lilac);
+  --primary: var(--pink);
+}
+
+h1 {
+  font-size: var(--h1);
+  background-color: var(--secondary);
+  color: var(--primary);
+}
+h2 {
+  font-size: var(--h2);
+  color: var(--primary);
+}
+
+h3 {
+  font-size: var(--h3);
+  color: var(--five);
+}
+
+h4 {
+  font-size: var(--h4);
+  color: var(--secondary);
+}
+
+h5 {
+  font-size: var(--h5);
+}
+p {
+  font-size: var(--h5);
+}
+button {
+  font-size: var(--h3);
+  color: var(--primary);
+  background-color: var(--tertiary);
+  font-weight: bold;
+  border-radius: 1.5rem;
+  width: 30rem;
+  padding: 1.5rem;
+}
+a {
+  font-size: var(--h5);
+}
+
+.btn,
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  margin: 1rem auto;
+  font-size: 2rem;
+  border: none;
+  border-radius: 1.5rem;
+  transition: all 0.1s;
+}
+.btn:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 10px 0.5rem rgba(0, 0, 0, 0.2);
+}
+@import url("variables.css");
+.app {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+.card {
+  width: 36rem;
+  margin: 5rem;
+  padding: 1rem;
+  border-radius: 1.5rem;
+  background-color: var(--tertiary);
+  /* REPLACE BACKGROUND COLOR WITH COLOR SCHEME 
+   i still don't know whether to use % or rem cause if i use % just look what happens when you resize the window
+*/
+}
+.card-pic {
+  width: 100%;
+  height: 33rem;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 0.75rem;
+}
+.card-title {
+  text-align: center;
+  font-weight: 900;
+  padding-bottom: 0.75rem;
+}
+.caption {
+  text-align: center;
+  font-weight: 300;
+}
+.price {
+  color: #003333;
+  font-weight: 150;
+  font-size: var(--h4);
+}
+#eth {
+  padding-right: 0.75rem;
+}
+.card-text {
+  color: var(--black);
+  padding: 1rem;
+}
 body {
-    background-color: purple;
+  background-color: var(--secondary);
+}
+.buttons {
+  display: flex;
+  flex-flow: wrap;
+  justify-content: space-evenly;
+}
+
+@media screen and (max-width: 1024px) {
+  ul.menu {
+    display: none !important;
   }
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    text-align: center;
-    margin: 2rem;
-  }
+}
+ul.menu {
+  padding-top: 1.3rem;
+  padding-bottom: 1rem;
+}
+.main-title {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: var(--five);
+  padding: 3rem;
+  margin-top: 8rem;
+  margin-bottom: 8rem;
+  background-image: url("dwayne-boom.gif");
+  background-size: 45rem 30rem;
+}
+.menu-logo-name {
+  color: white;
+}
+#explosion {
+  width: 40rem;
+  height: 9rem;
+}
+.menu-logo img {
+  width: 9rem;
+  height: 9rem;
+}
