--- a/VITE-PROJECT/styles/variables.css
+++ b/VITE-PROJECT/styles/variables.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@400;700&display=swap%22);
+@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@400;700&display=swap%22");
 html,
 body,
 * {
